src/objects/DD_Provider_Alias__c.object
<CustomObject>
    <fields>
        <fullName>DD_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD_Provider__c</fullName>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alias/Other Name</relationshipLabel>
        <relationshipName>DD_Provider_Aliases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Alias/Other Name</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Provider Alias ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aliases/Other Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>